fixed the issue of background image not showing

--- a/damoke.css
+++ b/damoke.css
@@ -110,10 +110,11 @@ header {
 }
 
 .services-container {
-    background: url('public/damoke.jpg');
+    background-image: url('public/damoke.jpg');
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
+    -webkit-background-size: cover;
 }
 
 .services {
